<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linearLayout2"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Button
		android:id="@+id/DonorLoginButton"
		android:layout_width="wrap_content"
...
		app:layout_constraintHorizontal_bias="0.182"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2"
		app:layout_constraintVertical_bias="0.056" />

	<Button
		android:id="@+id/DonorSignupButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sign_up"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.845"
...
