...
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/text_margin"
			android:textAppearance="?attr/textAppearanceListItem" />
	
	<TextView
			android:id="@+id/content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/text_margin"
			android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>
